--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,5 +62,7 @@
     <string name="website">WEBSITE</string>
     <string name="channel_name">go4lunch</string>
     <string name="channel_description">"about meeting "</string>
+    <string name="current_restaurant_image">current restaurant image</string>
+    <string name="confirmation_button">confirmation button</string>
 
 </resources>
