--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -25,4 +25,6 @@
     <string name="title_workmates">Collègues</string>
     <string name="title_activity_google_maps">Carte</string>
     <string name="action_settings">Paramètres</string>
+    <string name="channel_description">à propos du rendez-vous</string>
+    <string name="title_activity_settings">Paramètres</string>
 </resources>
