--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,14 +55,28 @@
     <!-- workmate Fragment -->
     <string name="workmate_name_is_eating_type_restaurant_restaurant_name">workmate_example is eating at restaurant_example</string>
 
-    <!--RestaurantDetailsActivity Activity -->
+    <!--DetailActivity Activity -->
     <string name="french_restaurant_12_faubourg_poissoniere_street">"French Restaurant - 12 Faubourg Poissonière street "</string>
     <string name="call">CALL</string>
     <string name="like">LIKE</string>
     <string name="website">WEBSITE</string>
-    <string name="channel_name">go4lunch</string>
+    <string name="channel_name" translatable="false">go4lunch</string>
     <string name="channel_description">"about meeting "</string>
-    <string name="current_restaurant_image">current restaurant image</string>
-    <string name="confirmation_button">confirmation button</string>
+    <string name="current_restaurant_image" translatable="false">current restaurant image</string>
+    <string name="confirmation_button" translatable="false">confirmation button</string>
+
+    <!-- Settings Activity -->
+    <!-- Preference Titles -->
+    <string name="title_activity_settings">SettingsActivity</string>
+    <string name="location_header" translatable="false">Location</string>
+    <string name="notification_header" translatable="false">Notifications</string>
+    <!-- Location Preferences -->
+    <string name="signature_title" translatable="false">Your signature</string>
+    <string name="reply_title" translatable="false">Default reply action</string>
+    <!-- Notifications Preferences -->
+    <string name="notification_title" translatable="false">Enable Notifications</string>
+    <string name="attachment_title" translatable="false">Download incoming attachments</string>
+    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails</string>
+    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
 
 </resources>
